k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookmarket
  labels:
    name: bookmarket
    istio-injection: enabled
